# glaze-gallery

./: .dev.vars.example  .env.example  .gitignore  .prettierrc  AGENTS.md  LICENSE  README.md  astro.config.ts  package.json  pyproject.toml
glaze_gallery/: _constants.py  _download.py  _download_data.py  _download_images.py  _google_api.py  _image_processing.py  _r2.py  _random_dirs.py  _studios.py
public/: NOTICE
src/: constants.ts  env.d.ts  types.ts  utils.ts
src/assets/: NOTICE
src/components/: Footer.astro  GlazeSelect.astro  GlazeTile.astro  Header.astro  ObfuscatedEmail.astro  WarningIcons.astro  index.ts
src/components/icons/: BlisterJumpCrawlIcon.astro  FlipIcon.astro  Icon.astro  IconInParentheses.astro  NotFoodSafeIcon.astro  RunnyIcon.astro  index.ts
src/layouts/: Base.astro
src/pages/: 404.astro  [glaze1]-[glaze2]-[side]-[res].webp.astro  [glaze1]-[glaze2].astro  index.astro  login.astro
src/styles/: global.css
src/utils/: glaze-combos.ts  icon.ts  login.ts  studio.ts
sync/: README.md  pyproject.toml
sync/glaze_gallery_sync/: _download.py  _google_api.py
