[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "glaze-gallery"
version = "0.1.0"
description = ""
authors = [{ name = "Alex Hadley", email = "contact@alexhadley.net" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "pytz (>=2025.2)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "cairosvg (>=2.7.1,<3.0.0)",
    "google-api-python-client (>=2.168.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
]

[project.scripts]
download_images = "glaze_gallery._download_images:download_images"
download_data = "glaze_gallery._download_data:download_data"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-tqdm = "^4.67.0.20250417"
types-requests = "^2.32.0.20250328"
pandas-stubs = "^2.2.3.250308"

[tool.mypy]
strict = true
